--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -77,7 +77,10 @@
         </p>
         <p>
             It was then I decided to write something better in order to create some much needed competition in this space and in turn lift the quality of the available options.
-            AcuStock is an Ionic framework (https://ionicframework.com/) application which utilises some awesome modern
+            Have I achieved that goal? I'll let the users decide for themselves :-)
+        </p>
+        <p>
+            AcuStock is an Ionic framework (https://ionicframework.com/) application. Ionic utilises some awesome modern
             technologies such as Cordova, Typescript, and Angular to create cross-platform applications.
             AcuStock is only distributed on Android at the moment but can also be compiled for iOS, Windows Phone and even as a web app for use on any device with a modern browser.
         </p>
