--- a/src/pages/preferences/preferences.html
+++ b/src/pages/preferences/preferences.html
@@ -66,7 +66,7 @@
             <ion-item tappable (click)="checkForUpdate();">
                 <ion-label>Check for update</ion-label>
             </ion-item>
-            <ion-item tappable ()="rollbackVersion()">
+            <ion-item tappable (click)="rollbackVersion()">
                 <ion-label>Rollback to last version</ion-label>
             </ion-item>
         </ion-item-group>
