Small tweaks, let's call this beta!
- Added preferences key minification for QR code.
- Removed rollback (ionic pro doesn't support it unfortunately).
- Fixed duplicate event subscription.

--- a/src/pages/preferences/preferences.html
+++ b/src/pages/preferences/preferences.html
@@ -66,9 +66,9 @@
             <ion-item tappable (click)="checkForUpdate();">
                 <ion-label>Check for update</ion-label>
             </ion-item>
-            <ion-item tappable (click)="rollbackVersion()">
+            <!--<ion-item tappable (click)="rollbackVersion()">
                 <ion-label>Rollback to last version</ion-label>
-            </ion-item>
+            </ion-item>-->
         </ion-item-group>
     </ion-list>
 </ion-content>
