Added Acumatica customisation presence & version check and other small tweaks.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -35,8 +35,8 @@
             <h6>Author: Michael B Wallace &lt;<a href="mailto:michael@wallaceit.com.au">michael@wallaceit.com.au</a>&gt;</h6>
         </div>
         <p>
-            AcuStock is a mobile inventory management app for Acumatica that allows data entry of the most common warehouse
-            functions via manual entry or scanning. These functions include:
+            AcuStock is a mobile inventory management app for Acumatica and other white labelled variants such as MYOB Advanced.
+            It enabled data entry of the most common warehouse functions via barcode scanning or manual entry. These functions include:
         </p>
         <ul>
             <li>Directed picking</li>
@@ -80,8 +80,8 @@
             Have I achieved that goal? I'll let the users decide for themselves :-)
         </p>
         <p>
-            AcuStock is an Ionic framework (https://ionicframework.com/) application. Ionic utilises some awesome modern
-            technologies such as Cordova, Typescript, and Angular to create cross-platform applications.
+            AcuStock is an Ionic framework (<a href="https://ionicframework.com/">https://ionicframework.com/</a>) application.
+            Ionic utilises some awesome modern technologies such as Cordova, Typescript, and Angular to create cross-platform applications.
             AcuStock is only distributed on Android at the moment but can also be compiled for iOS, Windows Phone and even as a web app for use on any device with a modern browser.
         </p>
         <h4>License</h4>
