--- a/src/pages/about/userguide/userguide.html
+++ b/src/pages/about/userguide/userguide.html
@@ -155,7 +155,7 @@
             <p>
                 <!--TODO: Check this is correct -->
                 You can scan a location barcode at any time to override the receipt location for the current item.
-                If you scan a different item, the currently entered item gets automatically added onto the pending list.
+                If you scan a different item, the currently entered item, if valid, gets automatically added onto the pending list.
             </p>
             <p>
                 If you make a mistake, you can edit the quantity on the entry screen or by clicking on the item in the pending list.
@@ -254,8 +254,11 @@
             <h5>Setting Up AcuStock</h5>
             <h6>Acumatica Customisation Project</h6>
             <p>
-                TBC
+                AcuStock requires a customisation project to be installed in Acumatica to function.
+                To install the customisation project, please see the instructions at the following link:
+                <a href="https://acustock.wallaceit.com.au/setup">https://acustock.wallaceit.com.au/setup</a>
             </p>
+            <h6>Configuration Barcode</h6>
             <p>
                 AcuStock can be configured manually via the settings screen or by scanning a special configuration barcode.
                 The application provides an easy option to generate a configuration barcodes from the devices current configuration.
