--- a/src/pages/count/count.html
+++ b/src/pages/count/count.html
@@ -66,7 +66,7 @@
         </ion-row>
         <ion-row>
             <ion-col>
-                <label>Completed:</label>
+                <label>Approx. Completed:</label>
             </ion-col>
             <ion-col>
                 {{countProvider.countPercent}}%
