Fixed about wording.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -40,7 +40,7 @@
         </p>
         <ul>
             <li>Directed picking</li>
-            <li>Inter-warehouse transfers</li>
+            <li>Warehouse location transfers</li>
             <li>Receipt of shipments, transfers (including IN/SO transfers) and purchase orders</li>
             <li>Item & Location stock lookup</li>
             <li>Item stock adjustment (quick cycle-counting)</li>
