--- a/src/pages/about/userguide/userguide.html
+++ b/src/pages/about/userguide/userguide.html
@@ -254,7 +254,7 @@
             <h5>Setting Up AcuStock</h5>
             <h6>Acumatica Customisation Project</h6>
             <p>
-                AcuStock requires a customisation project to be installed in Acumatica to function.
+                AcuStock requires a customization project to be installed in Acumatica to function.
                 To install the customisation project, please see the instructions at the following link:
                 <a href="https://acustock.wallaceit.com.au/setup">https://acustock.wallaceit.com.au/setup</a>
             </p>
