--- a/src/pages/setup/setup.html
+++ b/src/pages/setup/setup.html
@@ -28,11 +28,8 @@
 <ion-content padding text-center>
     <img style="width: 90px;" src="../../assets/imgs/logo.png" />
     <h2>Welcome to AcuStock</h2>
-    <p>To get started you must install the AcuStock customisation in Acumatica.
-        Once completed you can configure your devices manually or using QR code.
-        <!--
-            To generate QR codes you can use the utility here or consult the user guide.
-        -->
+    <p>To get started you must install the AcuStock customization in Acumatica.
+        Once completed you can configure your devices manually or using QR code. For steps on how to generate a configuration code, please
     </p>
     <strong>Set connection preferences or scan a configuration barcode</strong>
     <br/><br/>
