--- a/src/pages/bin-lookup/bin-lookup.html
+++ b/src/pages/bin-lookup/bin-lookup.html
@@ -50,7 +50,7 @@
 <ion-content padding>
     <ion-row class="table-header">
         <ion-col col-5>Item</ion-col>
-        <ion-col col-7 text-right>Available / On-Hand</ion-col>
+        <ion-col col-7 class="column-right">Available / On-Hand</ion-col>
     </ion-row>
     <ion-list class="item-list">
         <ion-item class="list-item" no-padding tappable *ngFor="let item of binContents" (click)="openDetailsModal($event, item);">
