--- a/src/pages/item-lookup-details/item-lookup-details.html
+++ b/src/pages/item-lookup-details/item-lookup-details.html
@@ -19,13 +19,13 @@
 <ion-header>
 
     <ion-navbar>
-        <ion-title>Item Location Details</ion-title>
+        <ion-title>Item Details</ion-title>
     </ion-navbar>
 
-    <div id="details-container" class="{{detailsCollapsed ? 'collapsed' : ''}}">
+    <!--<div id="details-container" class="{{detailsCollapsed ? 'collapsed' : ''}}">
         <div tabbable (click)="toggleCollapsed();">
             <h3 style="display: inline-block;">Item Details</h3>
-            <ion-icon id="chevron" dark name="ios-arrow-down" style="float:right; margin:"></ion-icon>
+            <ion-icon id="chevron" dark name="ios-arrow-down" style="float:right;"></ion-icon>
         </div>
         <div id="details-table">
             <table>
@@ -60,11 +60,51 @@
             <ion-col col-7>Serial / Lot</ion-col>
             <ion-col col-5 text-right>Available / On-Hand</ion-col>
         </ion-row>
-    </div>
+    </div>-->
 </ion-header>
 
 <ion-content padding>
-    <ion-list class="item-list">
+    <div id="details-table">
+        <table>
+            <tr>
+                <td style="width: 100px;">InventoryID:</td>
+                <td>{{item.InventoryID.value}}</td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">Description:</td>
+                <td>{{item.Description.value}}</td>
+            </tr>
+            <tr>
+                <td>Warehouse:</td>
+                <td>{{item.Warehouse.value}}</td>
+            </tr>
+            <tr>
+                <td>Location:</td>
+                <td>{{item.Location.value}}</td>
+            </tr>
+            <tr>
+                <td>Qty On-Hand:</td>
+                <td>{{item.QtyOnHand.value}}</td>
+            </tr>
+            <tr>
+                <td>Qty Available:</td>
+                <td>{{item.QtyAvailable.value}}</td>
+            </tr>
+            <tr>
+                <td>L/S Tracking:</td>
+                <td>{{item.LotSerialClassTracking.value}}</td>
+            </tr>
+        </table>
+    </div>
+    <div style="text-align: center; padding-top:10px;">
+        <button ion-button icon-start (click)="viewAllocations();">Allocations</button>
+        <!--<button ion-button icon-start (click)="viewHistory()">History</button>-->
+        <!-- TODO: Hide if item isn't serial/lot tracked -->
+        <div class="{{item?.LotSerialClassTracking?.value == 'Not Tracked' ? 'hidden' : ''}}">
+            <button ion-button icon-start (click)="viewSerialLots();">Serials</button>
+        </div>
+    </div>
+    <!--<ion-list class="item-list">
         <ion-item class="list-item" no-padding *ngFor="let serial of data.LotSerialDetails">
             <ion-row>
                 <ion-col col-7>
@@ -75,5 +115,5 @@
                 </ion-col>
             </ion-row>
         </ion-item>
-    </ion-list>
+    </ion-list>-->
 </ion-content>
