--- a/src/pages/pick-shipments/pick/tabs/pick.html
+++ b/src/pages/pick-shipments/pick/tabs/pick.html
@@ -89,7 +89,7 @@
         </ion-row>-->
         <ion-row *ngIf="showQty">
             <ion-col>
-                <ion-item>
+                <ion-item no-margin no-padding>
                     <ion-label color="primary">Qty:</ion-label>
                     <ion-input [ngModel]="getSuggestedPickQty()" readonly></ion-input>
                 </ion-item>
@@ -102,18 +102,16 @@
                 </ion-item>
             </ion-col>
         </ion-row>
-        <ion-row>
+        <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
             <ion-col col-6>
-                <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
-                    <ion-col>Available Qty:</ion-col>
-                    <ion-col>{{this.itemAvailability[this.enteredData.location].QtyAvailable.value}}</ion-col>
-                </ion-row>
-                <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
-                    <ion-col>On-Hand Qty</ion-col>
-                    <ion-col>{{this.itemAvailability[this.enteredData.location].QtyOnHand.value}}</ion-col>
-                </ion-row>
+                Available / On-Hand:
             </ion-col>
-            <ion-col col-6 text-right>
+            <ion-col col-6>
+                {{this.itemAvailability[this.enteredData.location].QtyAvailable.value}} / {{this.itemAvailability[this.enteredData.location].QtyOnHand.value}}
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col col-12 text-right>
                 <button type="button" ion-button small (click)="addPick()">OK</button>
                 <button type="button" ion-button small (click)="resetForm()">Cancel</button>
             </ion-col>
