--- a/src/pages/pick-shipments/pick-shipments.html
+++ b/src/pages/pick-shipments/pick-shipments.html
@@ -91,7 +91,7 @@
                     <label>Unpicked Items:</label>
                 </ion-col>
                 <ion-col>
-                    {{pickProvider.unpickedQty}}
+                    {{pickProvider.confirmedUnpickedQty}}
                 </ion-col>
             </ion-row>
             <ion-row>
