Lots of bug fixes and improvements
- Fixed issue with back button click handler - handle modal close.
- Added location selector modal to pick screen.
- Overhauled barcode listeners. Removed all barcode listeners from pages,
  placed a single barcodes listener at the root of the app. All pages now listen to the ionic barcode:scan event.
  Fixed race condition issue caused by ionViewWillLeave firing after ionViewDidLoad, causing all event listeners to be removed.
  Changed code so that only the pages listener is unregistered.
- Added location/item descriptions to item/location lookup lists.
- Added character minimum and increased debounce on item auto-complete to help with performance with large dataset.
- Added quantity on shipment list.
- Lots more improvements to picking. Availability lookup now done when location is scanned.
  Added an option to remove unpicked items from the shipment.
  Item availability cache now cleared when the item is not available so a fresh lookup is performed
  next scan incase and adjustment or transfer is made.
  Removed load saved picks prompt, they are now always loaded and the user can clear them if they wish.

--- a/src/pages/adjustment/tabs/adjustment-enter.html
+++ b/src/pages/adjustment/tabs/adjustment-enter.html
@@ -88,10 +88,10 @@
 <ion-footer no-shadow>
     <ion-toolbar position="bottom">
         <ion-row>
-            <ion-col>
+            <ion-col col-3>
                 <button type="button" ion-button small (click)="nextLocation()">Next Bin</button>
             </ion-col>
-            <ion-col text-right>
+            <ion-col col-9 text-right>
                 <button type="button" ion-button small (click)="clearAdjustments()">Clear</button>
                 <button type="button" ion-button small (click)="commitAdjustments()">Commit</button>
             </ion-col>
