--- a/src/pages/pick-shipments/list/pick-shipments-list.html
+++ b/src/pages/pick-shipments/list/pick-shipments-list.html
@@ -43,12 +43,12 @@
                     <ion-col col-8>
                         <div>
                             <strong>{{ship.ShipmentNbr.value}}</strong><br/>
-                            {{ship.Type.value}}
+                            {{ship.Type.value}} - {{ship.PickStatus.value}}
                         </div>
                     </ion-col>
                     <ion-col col-4 class="column-right" text-right>
                         {{util.formatDatetime(ship.ShipmentDate.value)}}<br/>
-                        {{ship.PickStatus.value}}
+                        {{ship.ShippedQuantity.value}}
                     </ion-col>
                 </ion-row>
             </ion-item>
