Added counts list, fixed picking order and added option to skip reloading of assignment status when starting pick.

--- a/src/pages/count/count.html
+++ b/src/pages/count/count.html
@@ -46,6 +46,9 @@
             </ion-item>
         </ion-list>
     </form>
+    <div style="text-align: right;">
+        <button type="button" ion-button (click)="openCountList();">List</button>
+    </div>
     <ion-grid *ngIf="countProvider.physicalCount">
         <ion-row>
             <ion-col>
