--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -86,21 +86,7 @@
         </p>
         <h4>License</h4>
         <strong>Copyright (c) 2018 Michael B Wallace</strong>
-        <div *ngIf="license == 'arr'">
-            <strong>All Rights Reserved</strong>
-            <p>
-                This version of AcuStock is under a propriety and confidential All Rights Reserved license.
-                Unauthorized distribution of this application for commercial use, via any medium is strictly prohibited.
-                This program is distributed in the hope that it will be useful,
-                but WITHOUT ANY WARRANTY; without even the implied warranty of
-                MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-            </p>
-            <p>
-                An open-source GPL licensed version of AcuStock is available for a fee. Please contact Michael Wallace &lt;<a href="mailto:michael@wallaceit.com.au">michael@wallaceit.com.au</a>&gt;
-                if you are interested in purchasing a source code license.
-            </p>
-        </div>
-        <div *ngIf="license == 'gpl'">
+        <div>
             <p>This program is free software: you can redistribute it and/or modify
                 it under the terms of the GNU General Public License as published by
                 the Free Software Foundation, either version 3 of the License, or
