--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -84,6 +84,10 @@
             Ionic utilises some awesome modern technologies such as Cordova, Typescript, and Angular to create cross-platform applications.
             AcuStock is only distributed on Android at the moment but can also be compiled for iOS, Windows Phone and even as a web app for use on any device with a modern browser.
         </p>
+        <p>
+            AcuStock is an open-source application. You can access the source code and contribute to the project at Github:
+            <a href="https://github.com/micwallace/acustock"></a>
+        </p>
         <h4>License</h4>
         <strong>Copyright (c) 2018 Michael B Wallace</strong>
         <div>
